# unit-test-sample

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md
.github/workflows/: ci.yml
cpp/: .gitignore  README.md  build.sh  clean.sh
cpp/01-cpp-unit-simple/: CMakeLists.txt  readme.md
cpp/01-cpp-unit-simple/src/: FizzBuzz1.cpp  FizzBuzz1.hpp  Stack.hpp
cpp/01-cpp-unit-simple/test/: FizzBuzz1Test.cpp  StackTest.cpp  TestRunner.cpp
cpp/01-gtest-simple/: .gitignore  CMakeLists.txt
cpp/01-gtest-simple/src/: FizzBuzz1.cpp  FizzBuzz1.hpp  Stack.hpp
cpp/01-gtest-simple/test/: FizzBuzz1Test.cpp  StackTest.cpp
cpp/02-gtest-ut/: CMakeLists.txt
cpp/02-gtest-ut/src/: FizzBuzz2.cpp  FizzBuzz2.hpp
cpp/02-gtest-ut/test/: FizzBuzz2Test.cpp
cpp/04-gtest-mock/: CMakeLists.txt
cpp/04-gtest-mock/src/: Bomb.cpp  Bomb.hpp  CurrencyConversionException.hpp  Money.cpp  Tick.hpp
cpp/04-gtest-mock/test/: CurrencyCalculatorTest.cpp  TickTest.cpp
cpp/05-catch2/: CMakeLists.txt
cpp/05-catch2/src/: Bomb.cpp  CurrencyCalculator.cpp  CurrencyCalculator.hpp  Money.hpp  RateService.cpp  RateService.hpp  Tick.cpp
cpp/05-catch2/test/: CurrencyCalculatorTest.cpp  FizzBuzz2Test.cpp  TickTest.cpp
java/: .gitignore  README.md  build.sh  clean.sh
java/01-简单junit4/: pom.xml
java/01-简单junit4/src/main/java/com/foo/: FizzBuzz1.java
java/01-简单junit4/src/site/: site.xml
java/01-简单junit4/src/test/java/com/foo/: FizzBuzz1AltTest.java  FizzBuzz1Test.java  StackTest.java
java/02-简单junit5/: pom.xml
java/02-简单junit5/src/main/java/com/foo/: FizzBuzz2.java
java/03-spring-boot下做junit/: pom.xml
java/03-spring-boot下做junit/src/test/java/com/foo/: FizzBuzz2Test.java
java/03-spring-boot下做junit/test/java/com/foo/: FizzBuzz2Test2.java
java/04-with-mock/: classDiagram.mmd  config.yaml  pom.xml
java/04-with-mock/src/main/java/com/foo/bomb/: Bomb.java  Tick.java
java/04-with-mock/src/main/java/com/foo/currency/: CurrencyCalculator.java  CurrencyConversionException.java  CurrencyMain.java  Money.java  RateService.java
java/04-with-mock/src/main/java/com/foo/currency/config/: ConfigDto.java  ConfigReader.java  YamlConfigReader.java
java/04-with-mock/src/test/java/com/foo/bomb/: TickTest.java
java/04-with-mock/src/test/java/com/foo/currency/: CurrencyCalculatorTest.java
java/05-spring-boot-test/: Untitled-1.mmd  pom.xml
java/05-spring-boot-test/src/main/java/com/foo/: Application.java  HelloController.java
java/05-spring-boot-test/src/main/java/com/foo/mod1/: Account.java  UserController.java  UserService.java
java/05-spring-boot-test/src/test/java/com/foo/: HelloControllerTest.java
java/05-spring-boot-test/src/test/java/com/foo/mod1/: UserControllerTest.java  UserControllerTest2.java  UserControllerTest3.java
javascript/: .gitignore  README.md  build.sh  clean.sh
javascript/02-jasmine/: package-lock.json  package.json
javascript/02-jasmine/spec/: fizzbuzz2.spec.js
javascript/02-jest/: package-lock.json  package.json
javascript/02-jest/src/: fizzbuzz2.test.js
javascript/02-mocha/: package-lock.json  package.json
javascript/02-mocha/src/: fizzbuzz2.js
javascript/02-mocha/test/: fizzbuzz2.test.js
javascript/02-vitest/: package-lock.json  package.json
javascript/02-vitest/src/: fizzbuzz2.js
javascript/02-vitest/test/: fizzbuzz2.test.js
